# my-lang

./: ANCHOR.scope-arrest.2026-01-01.Jewell.scm  Cargo.toml  IMPLEMENTATION.md  Justfile  META.scm  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  STATE.scm  grammar.ebnf
.github/: FUNDING.yml
.machine_read/: ANCHOR.scm  AUTHORITY_STACK.scm  DIALECT_INDEX.scm  LLM_SUPERINTENDENT.scm  ROADMAP.f0.scm  SPEC.playground.scm
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
crates/my-ai/: Cargo.toml
crates/my-ai/src/: lib.rs
crates/my-fmt/: Cargo.toml
crates/my-fmt/src/: lib.rs  main.rs
crates/my-hir/: Cargo.toml
crates/my-hir/src/: lib.rs
crates/my-lang/: Cargo.toml
crates/my-lang/lib/: mod.rs
crates/my-lang/lib/common/: array.rs  mod.rs  string.rs
crates/my-lang/lib/mylang/: ai.rs  stream.rs  tools.rs
crates/my-lang/src/: ast.rs  checker.rs  lib.rs  main.rs  parser.rs  proptest.rs  scope.rs  token.rs
crates/my-lint/: Cargo.toml
crates/my-lint/src/: lib.rs  main.rs
crates/my-llvm/: Cargo.toml
crates/my-llvm/src/: lib.rs
crates/my-lsp/: Cargo.toml
crates/my-lsp/src/: lib.rs  main.rs
crates/my-mir/: Cargo.toml
crates/my-mir/src/: lib.rs
crates/my-pkg/: Cargo.toml
crates/my-pkg/src/: lib.rs
crates/my-test/: Cargo.toml
crates/my-test/src/: lib.rs  main.rs
docs/wiki/: README.md
docs/wiki/guides/: getting-started.md  installation.md
docs/wiki/internals/: architecture.md  contributing.md  lexer.md  parser.md  stdlib-design.md  type-checker.md
docs/wiki/language/: ai-features.md  concurrency.md  effects.md  functions.md  memory.md  modules.md  syntax.md  tour.md  types.md
docs/wiki/reference/: grammar.md  keywords.md  operators.md  stdlib.md
docs/wiki/roadmap/: compiler.md  ecosystem.md  language.md  overview.md  tooling.md
docs/wiki/tooling/: overview.md
docs/wiki/tutorials/: basics.md
examples/: demo.ml  hello.ml
hives/: README.adoc
lib/common/: io.rs  math.rs  types.rs  utils.rs
lib/mylang/: mod.rs  prompt.rs
my-ssg/: Cargo.toml
my-ssg/src/: config.rs  generator.rs  main.rs  markdown.rs  template.rs
proofs/duet/: README.md
proofs/duet/session-types/: formal-system.md
proofs/ensemble/: README.md
proofs/ensemble/agent-calculus/: pi-calculus-foundation.md
proofs/ensemble/spectrum-theory/: newtonian-agents.md
proofs/me/: README.md
proofs/me/block-calculus/: algebra.md
proofs/me/pedagogy/: learning-theory.md
proofs/me/visual-semantics/: formal-model.md
proofs/shared/ai-semantics/: README.md
proofs/shared/denotational-semantics/: README.md  domains.md
proofs/shared/effect-system/: README.md  algebra.md  soundness.md
proofs/shared/memory-model/: README.md  ownership.md
proofs/shared/operational-semantics/: README.md  small-step.md
proofs/shared/type-system/: README.md  inference.md  metatheory.md  soundness.md  subtyping.md  syntax.md  typing-rules.md
proofs/solo/: README.md
proofs/solo/affine-types/: formal-system.md
proofs/solo/contracts/: design-by-contract.md
proofs/verification/: README.md
proofs/verification/coq/: Syntax.v  Typing.v
proofs/white-papers/: ai-integration.md  language-design.md
src/: checker.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  stdlib.rs  types.rs
tests/: integration_test.rs  property_tests.rs
