# SPDX-License-Identifier: MIT
[package]
name = "my-fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code formatter for My Language"

[lib]
name = "my_fmt"
path = "src/lib.rs"

[[bin]]
name = "my-fmt"
path = "src/main.rs"

[dependencies]
my-lang.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
