# SPDX-License-Identifier: MIT
[package]
name = "my-lint"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Linter for My Language"

[lib]
name = "my_lint"
path = "src/lib.rs"

[[bin]]
name = "my-lint"
path = "src/main.rs"

[dependencies]
my-lang.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
