# SPDX-License-Identifier: MIT
[package]
name = "my-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Package manager for My Language"

[lib]
name = "my_pkg"
path = "src/lib.rs"

[dependencies]
my-lang.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
semver.workspace = true
petgraph.workspace = true
reqwest.workspace = true
tracing.workspace = true
